# intellex_vesting_contracts

releases/: session_vault_release.wasm
session_vault/: Cargo.toml
